--- a/.github/workflows/zap_baseline_sacn.yml
+++ b/.github/workflows/zap_baseline_sacn.yml
@@ -14,17 +14,24 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set Up ZAP Work Directory
-      run: |
-        mkdir -p ${{ github.workspace }}/zap/wrk
-        echo "baseurl: https://github.com/sahu04/zapscan.git" > ${{ github.workspace }}/zap/wrk/zap.yaml
+      run: mkdir -p ${{ github.workspace }}/zap/wrk
 
-    - name: ZAP Baseline Scan
+    - name: Run ZAP Baseline Scan
       run: |
         docker run -v ${{ github.workspace }}/zap/wrk:/zap/wrk/:rw --network=host \
           -e ZAP_AUTH_HEADER -e ZAP_AUTH_HEADER_VALUE -e ZAP_AUTH_HEADER_SITE \
           -t ghcr.io/zaproxy/zaproxy:stable zap-baseline.py -c /zap/wrk/zap.yaml \
-          -J /zap/wrk/report_json.json -w /zap/wrk/report_md.md -r /zap/wrk/report_html.html 2> /zap/wrk/error.log
+          -J /zap/wrk/report_json.json -w /zap/wrk/report_md.md -r /zap/wrk/report_html.html 2> ${{ github.workspace }}/zap/wrk/error.log
       env:
+        ZAP_AUTH_HEADER: your_auth_header_value
+        ZAP_AUTH_HEADER_VALUE: your_auth_header_site
+
+    - name: Display ZAP Report
+      run: cat ${{ github.workspace }}/zap/wrk/report_md.md
+
+    - name: Display ZAP Error Log
+      run: cat ${{ github.workspace }}/zap/wrk/error.log
+
         ZAP_AUTH_HEADER: your_auth_header_value
         ZAP_AUTH_HEADER_VALUE: your_auth_header_site
 
