--- a/.github/workflows/zap_baseline_sacn.yml
+++ b/.github/workflows/zap_baseline_sacn.yml
@@ -5,28 +5,20 @@ on:
     paths-ignore:
       - '**.md'
 
+
 jobs:
-  zap_security_scan:
+  zap_scan:
     runs-on: ubuntu-latest
-
+    name: Scan the web application
     steps:
-      - name: Checkout Code
+      - name: Checkout
         uses: actions/checkout@v2
-
-      - name: Set Up ZAP Work Directory
-        run: mkdir -p ${{ github.workspace }}/zap/wrk
-
-      - name: ZAP Security Scan
-        uses: zaproxy/action-baseline@v0.10.0
         with:
-          target: ${{ github.event.before }}..${{ github.sha }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          ref: testing
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.6.1
+        with:
+          docker_name: 'owasp/zap2docker-stable'
+          target: 'https://github.com/sahu04/zapscan.git'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
-
-      - name: Display ZAP Report
-        run: cat ${{ github.workspace }}/zap/wrk/report_md.md
-
-      - name: Display ZAP Error Log
-        run: cat ${{ github.workspace }}/zap/wrk/error.log
