--- a/.github/workflows/zap_baseline_sacn.yml
+++ b/.github/workflows/zap_baseline_sacn.yml
@@ -18,7 +18,7 @@ jobs:
       - name: ZAP Scan
         uses: zaproxy/action-baseline@v0.10.0
         with:
-          docker_name: 'owasp/zap2docker-stable'
+          # docker_name: 'owasp/zap2docker-stable'
           target: 'https://github.com/sahu04/zapscan.git'
-          rules_file_name: '.zap/rules.tsv'
+          # rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
